--- a/index3.css
+++ b/index3.css
@@ -85,7 +85,7 @@ nav li {
     color: #a8a8a8;
     font-weight: 600;
     z-index: 1;
-    height: 400px;
+    height: 600px;
 }
 #about h2 {
     margin: 15px 20px;
@@ -96,7 +96,7 @@ nav li {
     color: #a4978e;
     z-index: 2;
     font-weight: 600;
-    height: 650px;
+    height: auto;
 }
    
 .project-image{
